--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "https://github.com/Eisbaeeer/ioBroker.piface"
   },
   "dependencies": {
-	"piface-node": "https://github.com/Eisbaeeer/piface-node/tarball/master/"
+	"node-pifacedigital": "https://github.com/Eisbaeeer/node-pifacedigital/tarball/master/"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
