--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,21 @@
 os:
   - linux
-  - osx
 language: node_js
 node_js:
-  - '0.10'
-  - '0.12'
   - '4'
   - '6'
   - '7'
+before_install:
+  - git clone https://github.com/piface/libmcp23s17.git
+  - cd libmcp23s17/
+  - make
+  - sudo make install
+  - cd ..
+  - git clone https://github.com/piface/libpifacedigital.git
+  - cd libpifacedigital/
+  - make
+  - sudo make install
+  - cd ..
 before_script:
   - npm install winston@2.3.0
   - 'npm install https://github.com/ioBroker/ioBroker.js-controller/tarball/master --production'
